5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4363/executions/1892_3180.log
== TEST (2019-07-09 19:19:14) 
-- CODE:
from numpy import *
a= array(eval(input()))
b = zeros(4,dtype=int)
for i in range(size(a)):
	if(a[i]==1):
		b[0]=b[0]+1
	if(a[i]==2):
		b[1]=b[1]+1
	if(a[i]==3):
		b[2]=b[2]+1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 19:19:39) 
-- CODE:
from numpy import *
a= array(eval(input()))
b = zeros(4,dtype=int)
for i in range(size(a)):
	if(a[i]==1):
		b[0]=b[0]+1
	if(a[i]==2):
		b[1]=b[1]+1
	if(a[i]==3):
		b[2]=b[2]+1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 19:20:07) 
-- CODE:
from numpy import *
a= array(eval(input()))
b = zeros(4,dtype=int)
for i in range(size(a)):
	if(a[i]==1):
		b[0]=b[0]+1
	if(a[i]==2):
		b[1]=b[1]+1
	if(a[i]==3):
		b[2]=b[2]+1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 19:20:14) 
-- CODE:
from numpy import *
a= array(eval(input()))
b = zeros(4,dtype=int)
for i in range(size(a)):
	if(a[i]==1):
		b[0]=b[0]+1
	if(a[i]==2):
		b[1]=b[1]+1
	if(a[i]==3):
		b[2]=b[2]+1
print(b)
-- EXECUTION TIME:
1.11509
-- TEST CASE 1:
---- input:
[1,2,3,4,3,2,1,2,3,2,4,1]
---- correct output:
[3 4 3 2]
---- user output:
[3 4 3 0]
-- TEST CASE 2:
---- input:
[1,3,3,4,1,3,1]
---- correct output:
[3 0 3 1]
---- user output:
[3 0 3 0]
-- TEST CASE 3:
---- input:
[1,2,3,4,1,2,3,4,1,2,3,4,1,2,3,4]
---- correct output:
[4 4 4 4]
---- user output:
[4 4 4 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 19:21:14) 
-- CODE:
from numpy import *
a= array(eval(input()))
b = zeros(4,dtype=int)
for i in range(size(a)):
	if(a[i]==1):
		b[0]=b[0]+1
	if(a[i]==2):
		b[1]=b[1]+1
	if(a[i]==3):
		b[2]=b[2]+1
	if(a[i]==4):
		b[3]=b[3]+
print(b)
-- ERROR:
File "XXXX", line 12
    b[3]=b[3]+
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 19:21:18) 
-- CODE:
from numpy import *
a= array(eval(input()))
b = zeros(4,dtype=int)
for i in range(size(a)):
	if(a[i]==1):
		b[0]=b[0]+1
	if(a[i]==2):
		b[1]=b[1]+1
	if(a[i]==3):
		b[2]=b[2]+1
	if(a[i]==4):
		b[3]=b[3]+1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 19:21:47) 
-- CODE:
from numpy import *
a= array(eval(input()))
b = zeros(4,dtype=int)
for i in range(size(a)):
	if(a[i]==1):
		b[0]=b[0]+1
	if(a[i]==2):
		b[1]=b[1]+1
	if(a[i]==3):
		b[2]=b[2]+1
	if(a[i]==4):
		b[3]=b[3]+1
print(b)
-- EXECUTION TIME:
1.02462
-- TEST CASE 1:
---- input:
[1,2,3,4,3,2,1,2,3,2,4,1]
---- correct output:
[3 4 3 2]
---- user output:
[3 4 3 2]
-- TEST CASE 2:
---- input:
[1,3,3,4,1,3,1]
---- correct output:
[3 0 3 1]
---- user output:
[3 0 3 1]
-- TEST CASE 3:
---- input:
[1,2,3,4,1,2,3,4,1,2,3,4,1,2,3,4]
---- correct output:
[4 4 4 4]
---- user output:
[4 4 4 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
